[package]
name = "tcp_proxy"
version = "0.1.0"
authors = ["Jack Kilrain <toastcraft.info@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java-properties = "1.3.0"
ipnet = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"
rayon = "1.5.0"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }
simplelog = "0.9.0"
chrono ="0.4.19"